# snes-studio

./: .gitignore  LICENSE  README.md  netlify.toml  pyproject.toml  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release-installers.yml  release-snes.yml
docs/: ARCHITECTURE.md  ASSET_SOURCES.md  DISCORD_ACTIVITY.md  EMULATOR.md  ENGINE.md  FEATURES.md  GITHUB_PAGES.md  HUMAN_IN_THE_LOOP.md  ISSUES.md  ROADMAP.md  TOOLCHAIN.md  WORKFLOW_REVIEW.md
examples/hello-human/: project.snesproj
examples/mango-island/: project.snesproj
examples/poachermon/: project.snesproj
examples/pocket-bugs/: project.snesproj
packaging/windows/: snes-studio.iss
scripts/: apply_tile_backgrounds.py  build_bg_tileset.py  build_pocket_bugs_real_assets.py  import_open_art_assets.py  make_mango_island.py  make_poachermon.py  make_pocket_bugs.py  make_templates.py  package_macos.sh  package_windows.ps1  snes_studio_cli.py  snes_studio_desktop.py  upgrade_template_art.py  validate-rom.sh
snesstudio/: agent.py  assets.py  blocks.py  cli.py  compiler.py  editor.py  patches.py  project.py  schema.py  server.py  sim.py  tilemap.py  toolchain.py
snesstudio/assets/: bg_overworld.json
snesstudio/templates/: Makefile.j2  README.generated.md.j2  hdr.asm.j2  main.c.j2  snesstudio_runtime.c.j2  snesstudio_runtime.h.j2  snesstudio_snes.c.j2
tests/: test_core.py  test_rom_integration.py
web/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
web/src/: api.js  discord.js  main.jsx  sprite-import.js  styles.css
(+12 files in other folders)
